--- a/BulllysentEmo.ipynb
+++ b/BulllysentEmo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNUP2PAzi8FaT30SHxrjLr6",
+      "authorship_tag": "ABX9TyMeYuWzluFe0r6e0plnMQX5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1500,6 +1500,39 @@
       },
       "execution_count": 103,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "#y_pred = model.predict(x_test)\n",
+        "print (classification_report (y_val, predicted))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yOrXyEi7Wx41",
+        "outputId": "b21afe52-b032-4b15-eef7-d24a83d2e7cb"
+      },
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.89      0.78      0.83       273\n",
+            "           1       0.82      0.91      0.86       302\n",
+            "\n",
+            "    accuracy                           0.85       575\n",
+            "   macro avg       0.85      0.85      0.85       575\n",
+            "weighted avg       0.85      0.85      0.85       575\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
