--- a/Copy_of_BulllysentEmo.ipynb
+++ b/Copy_of_BulllysentEmo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqeH79ecJmbVgIpOUpQcs8",
+      "authorship_tag": "ABX9TyPyqZ4okekiBWNecfHEfpQK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1954,21 +1954,268 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.svm import LinearSVC\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "import numpy as np"
+      ],
       "metadata": {
-        "id": "tnOGTs1fp-TO"
+        "id": "3NN_SsiP8QiM"
       },
-      "execution_count": null,
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train_tfidf, X_test_tfidf, y_train, y_test = train_test_split(X, y, random_state=42, test_size=0.2)\n",
+        "rf=RandomForestClassifier()\n",
+        "rf.fit(X_train_tfidf,y_train)\n",
+        "y_preds = rf.predict(X_test_tfidf)\n",
+        "acc1=accuracy_score(y_test,y_preds)\n",
+        "report = classification_report( y_test, y_preds )\n",
+        "print(report)\n",
+        "print(\"Random Forest, Accuracy Score:\",acc1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tnOGTs1fp-TO",
+        "outputId": "2c307aaf-97d1-4c2b-c029-07a3df6319d2"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.84      0.78      0.81       552\n",
+            "           1       0.81      0.87      0.84       597\n",
+            "\n",
+            "    accuracy                           0.82      1149\n",
+            "   macro avg       0.83      0.82      0.82      1149\n",
+            "weighted avg       0.82      0.82      0.82      1149\n",
+            "\n",
+            "Random Forest, Accuracy Score: 0.8233246301131418\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***https://github.com/NakulLakhotia/Hate-Speech-Detection-in-Social-Media-using-Python/blob/master/final_customization.ipynb***"
+      ],
+      "metadata": {
+        "id": "8XU3WIqc-uxf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "support =LinearSVC(random_state=20)\n",
+        "support.fit(X_train_tfidf,y_train)\n",
+        "y_preds = support.predict(X_test_tfidf)\n",
+        "acc3=accuracy_score(y_test,y_preds)\n",
+        "report = classification_report( y_test, y_preds )\n",
+        "print(report)\n",
+        "print(\"SVM, Accuracy Score:\" , acc3)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oqYsd8MOosae",
+        "outputId": "9ebbd182-e171-4386-98fc-b768cbadd744"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.78      0.77      0.78       552\n",
+            "           1       0.79      0.80      0.80       597\n",
+            "\n",
+            "    accuracy                           0.79      1149\n",
+            "   macro avg       0.79      0.79      0.79      1149\n",
+            "weighted avg       0.79      0.79      0.79      1149\n",
+            "\n",
+            "SVM, Accuracy Score: 0.7867711053089643\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from nltk.sentiment.vader import SentimentIntensityAnalyzer as VS\n",
+        "import warnings\n",
+        "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+        "%matplotlib inline"
+      ],
+      "metadata": {
+        "id": "w1NJBsHe9fPy"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "nltk.downloader.download('vader_lexicon')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2aLwitIT911_",
+        "outputId": "c8ab431d-161a-48f0-d61f-9723e2d057fe"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package vader_lexicon to /root/nltk_data...\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentiment_analyzer = VS()\n",
+        "def count_tags(tweet_c):  \n",
+        "    \n",
+        "    space_pattern = '\\s+'\n",
+        "    giant_url_regex = ('http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|'\n",
+        "        '[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+')\n",
+        "    mention_regex = '@[\\w\\-]+'\n",
+        "    hashtag_regex = '#[\\w\\-]+'\n",
+        "    parsed_text = re.sub(space_pattern, ' ', tweet_c)\n",
+        "    parsed_text = re.sub(giant_url_regex, 'URLHERE', parsed_text)\n",
+        "    parsed_text = re.sub(mention_regex, 'MENTIONHERE', parsed_text)\n",
+        "    parsed_text = re.sub(hashtag_regex, 'HASHTAGHERE', parsed_text)\n",
+        "    return(parsed_text.count('URLHERE'),parsed_text.count('MENTIONHERE'),parsed_text.count('HASHTAGHERE'))"
+      ],
+      "metadata": {
+        "id": "78DotzzQ9_0L"
+      },
+      "execution_count": 91,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "\n",
-        "\n"
+        "def sentiment_analysis(tweet):   \n",
+        "    sentiment = sentiment_analyzer.polarity_scores(tweet)    \n",
+        "    twitter_objs = count_tags(tweet)\n",
+        "    features = [sentiment['neg'], sentiment['pos'], sentiment['neu'], sentiment['compound'],twitter_objs[0], twitter_objs[1],\n",
+        "                twitter_objs[2]]\n",
+        "    #features = pandas.DataFrame(features)\n",
+        "    return features"
       ],
       "metadata": {
-        "id": "oqYsd8MOosae"
+        "id": "8Ufp5Jjv-Ezi"
+      },
+      "execution_count": 92,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sentiment_analysis_array(tweets):\n",
+        "    features=[]\n",
+        "    for t in tweets:\n",
+        "        features.append(sentiment_analysis(t))\n",
+        "    return np.array(features)\n",
+        "\n",
+        "final_features = sentiment_analysis_array(tweet)\n",
+        "#final_features"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 219
+        },
+        "id": "F0tp8pto-gPu",
+        "outputId": "87473bcb-d0a8-490e-93cb-7a9690a24ca8"
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-97-381f529d90db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mfinal_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msentiment_analysis_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtweet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;31m#final_features\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'tweet' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "new_features = panda.DataFrame({'Neg':final_features[:,0],'Pos':final_features[:,1],'Neu':final_features[:,2],'Compound':final_features[:,3],\n",
+        "                            'url_tag':final_features[:,4],'mention_tag':final_features[:,5],'hash_tag':final_features[:,6]})\n",
+        "new_features"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 237
+        },
+        "id": "DsFFOs6bosL3",
+        "outputId": "10ca8e23-84d6-4433-d98d-0f3e5377adbd"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-96-4a054e3ee802>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mfinal_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msentiment_analysis_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtweet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;31m#final_features\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'tweet' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "d4qC0D4r9Yot"
       },
       "execution_count": null,
       "outputs": []
@@ -1977,7 +2224,34 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "DsFFOs6bosL3"
+        "id": "bzJcRTbl9Yko"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HFOiwXkK9YhG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-A0yIprB9Ydh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DP8XRZYV9YY8"
       },
       "execution_count": null,
       "outputs": []
